# legalDocSumm

./: .gitignore  README.md  main.py  pyproject.toml
functions/: functions.py
